--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "threejs-journey-exercise",
+  "name": "low-poly-laboratory",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "@melloware/coloris": "^0.21.1",
-    "lil-gui": "^0.18.1",
     "sass": "^1.69.5",
     "three": "^0.153.0"
   }
